--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "mobile-editor",
+  "name": "ckeditor5-custom-build",
+  "author": "CKSource",
+  "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
+  "version": "0.0.1",
+  "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+  "main": "./build/ckeditor.js",
+  "types": "./build/ckeditor.d.ts",
+  "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "34.2.0",
+    "@ckeditor/ckeditor5-editor-classic": "34.2.0",
+    "@ckeditor/ckeditor5-essentials": "34.2.0",
+    "@ckeditor/ckeditor5-link": "34.2.0",
+    "@ckeditor/ckeditor5-list": "34.2.0",
+    "@ckeditor/ckeditor5-mention": "34.2.0",
+    "@ckeditor/ckeditor5-paragraph": "34.2.0",
+    "@ckeditor/ckeditor5-select-all": "34.2.0",
+    "@ckeditor/ckeditor5-undo": "34.2.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "vite": "^5.3.1"
+    "@ckeditor/ckeditor5-core": "^34.2.0",
+    "@ckeditor/ckeditor5-dev-translations": "^32.1.2",
+    "@ckeditor/ckeditor5-dev-utils": "^32.1.2",
+    "@ckeditor/ckeditor5-theme-lark": "^34.2.0",
+    "css-loader": "^5.2.7",
+    "postcss": "^8.4.32",
+    "postcss-loader": "^4.3.0",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.9.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^4.10.0"
   },
-  "dependencies": {
-    "ckeditor5": "^42.0.0"
+  "scripts": {
+    "build": "webpack --mode production",
+    "postbuild": "tsc --declaration --declarationDir build --stripInternal --emitDeclarationOnly"
   }
 }
